--- a/pc/16_UI_ADHPAcS04.html
+++ b/pc/16_UI_ADHPAcS04.html
@@ -72,7 +72,7 @@
                                             <button type="button" role="tab" class="tit" onclick="" aria-selected="false">참여 프로그램 관리</button>
                                         </div>
 
-                                        <div class="box_group_wrap prog_info_wrap">
+                                        <div class="box_group_wrap prog_info_wrap prog_view_result">
                                             <h3 class="t2_sb">프로그램 정보</h3>
                                             <div class="box_table_wrap write type01">
                                                 <table class="box_table new_progtable">
@@ -216,7 +216,7 @@
 
                                             <div class="btn_box mt40">
                                                 <button type="button" class="btn big type02 btn_s_r" aria-label="목록 페이지로 이동" onclick="">목록</button>
-                                                <button type="submit" id="" class="btn big fill type01" onclick="">신청</button>
+                                                <button type="button" id="" class="btn big fill type01" onclick="">신청 취소</button>
                                             </div>
                                         </div>
                                     </div>
