--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 조회</td>
                     <td>UI_ADHPAcS04</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/15_UI_ADHPAcS04.html" target="_blank">PC</a>
+                        <a href="./mobile/15_UI_ADHPAcS04.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
