--- a/pc/14_UI_ADHPAcM02.html
+++ b/pc/14_UI_ADHPAcM02.html
@@ -326,7 +326,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1 active">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
@@ -365,7 +365,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2 active"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
@@ -403,7 +403,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3 active"><p>선발</p></div>
@@ -441,7 +441,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1 active">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
@@ -479,7 +479,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1 active">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
@@ -517,7 +517,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1 active">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
@@ -555,7 +555,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1 active">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
@@ -593,7 +593,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1 active">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
@@ -631,7 +631,7 @@
                                                                 <div class="status">
                                                                     <div class="stat type_1 active">
                                                                         <p>신청</p>
-                                                                        <p class="stat-year">(2025-00-00)</p>
+                                                                        <p class="stat_small">(2025-00-00)</p>
                                                                     </div>
                                                                     <div class="stat type_2"><button type="button" class="btn small type01" aria-label="신청하기" onclick="">신청하기</button></div>
                                                                     <div class="stat type_3"><p>선발</p></div>
