--- a/pc/22_UI_ADHPAeM02.html
+++ b/pc/22_UI_ADHPAeM02.html
@@ -233,6 +233,7 @@
                             </div>
 
                             <script>
+                                // .new_sel_box의 select option요소 자동화
                                 document.addEventListener('DOMContentLoaded', function () {
                                     const yearSet = new Set();
                                     const uniSet = new Set();
