--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                     <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/15_UI_ADHPAcS04.html" target="_blank">PC</a>
-                        <a href="./mobile/15_UI_ADHPAcS04.html" target="_blank" class="none">MO</a>
+                        <a href="./pc/16_UI_ADHPAcS04.html" target="_blank">PC</a>
+                        <a href="./mobile/16_UI_ADHPAcS04.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -344,11 +344,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 목록 있음</td>
                     <td>UI_ADHPAdM02</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/18_UI_ADHPAdM02.html" target="_blank">PC</a>
+                        <a href="./mobile/18_UI_ADHPAdM02.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -360,11 +360,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 조회</td>
                     <td>UI_ADHPAdS03</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/19_UI_ADHPAdM03.html" target="_blank">PC</a>
+                        <a href="./mobile/19_UI_ADHPAdM03.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
