--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <td></td>
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/02_UI_ADHPAaM02.html" target="_blank">PC</a>
@@ -104,7 +104,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 없음</td>
                     <td>UI_ADHPAbM01</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/03_UI_ADHPAbM01.html" target="_blank">PC</a>
@@ -120,7 +120,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 있음</td>
                     <td>UI_ADHPAbM02</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/04_UI_ADHPAbM02.html" target="_blank">PC</a>
@@ -136,7 +136,7 @@
                     <td></td>
                     <td>참여신청서 - 등록</td>
                     <td>UI_ADHPAbS03</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/05_UI_ADHPAbS03.html" target="_blank">PC</a>
@@ -152,7 +152,7 @@
                     <td></td>
                     <td>참여신청서 - 조회</td>
                     <td>UI_ADHPAbS04</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/06_UI_ADHPAbS04.html" target="_blank">PC</a>
@@ -168,7 +168,7 @@
                     <td></td>
                     <td>참여신청서 - 회수(수정)</td>
                     <td>UI_ADHPAbS05</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/07_UI_ADHPAbS05.html" target="_blank">PC</a>
@@ -184,7 +184,7 @@
                     <td></td>
                     <td>운영 대학 검색 팝업</td>
                     <td>UI_ADHPAbP06</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/08_UI_ADHPAbP06.html" target="_blank">PC</a>
@@ -200,7 +200,7 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록</td>
                     <td>UI_ADHPAbP07</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/09_UI_ADHPAbP07.html" target="_blank">PC</a>
@@ -216,7 +216,7 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(계열분류)</td>
                     <td>UI_ADHPAbP08</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/10_UI_ADHPAbP08.html" target="_blank">PC</a>
@@ -232,7 +232,7 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(검색결과)</td>
                     <td>UI_ADHPAbP09</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/11_UI_ADHPAbP09.html" target="_blank">PC</a>
@@ -248,7 +248,7 @@
                     <td></td>
                     <td>개인정보 수집·이용·제공에 대한 동의서(참여자용)</td>
                     <td>UI_ADHPAbP10</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/12_UI_ADHPAbP10.html" target="_blank">PC</a>
@@ -264,7 +264,7 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 목록 없음</td>
                     <td>UI_ADHPAcM01</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/13_UI_ADHPAcM01.html" target="_blank">PC</a>
@@ -280,7 +280,7 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 목록 있음</td>
                     <td>UI_ADHPAcM02</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/14_UI_ADHPAcM02.html" target="_blank">PC</a>
@@ -296,7 +296,7 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 신청</td>
                     <td>UI_ADHPAcS03</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/15_UI_ADHPAcS03.html" target="_blank">PC</a>
@@ -312,7 +312,7 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 조회</td>
                     <td>UI_ADHPAcS04</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/16_UI_ADHPAcS04.html" target="_blank">PC</a>
@@ -328,7 +328,7 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 목록 없음</td>
                     <td>UI_ADHPAdM01</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/17_UI_ADHPAdM01.html" target="_blank">PC</a>
@@ -344,7 +344,7 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 목록 있음</td>
                     <td>UI_ADHPAdM02</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/18_UI_ADHPAdM02.html" target="_blank">PC</a>
@@ -360,11 +360,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 조회</td>
                     <td>UI_ADHPAdS03</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/19_UI_ADHPAdM03.html" target="_blank">PC</a>
-                        <a href="./mobile/19_UI_ADHPAdM03.html" target="_blank" class="none">MO</a>
+                        <a href="./pc/19_UI_ADHPAdS03.html" target="_blank">PC</a>
+                        <a href="./mobile/19_UI_ADHPAdS03.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -376,11 +376,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 만족도 조사</td>
                     <td>UI_ADHPAdS04</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/20_UI_ADHPAdS04.html" target="_blank">PC</a>
+                        <a href="./mobile/20_UI_ADHPAdS04.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -392,7 +392,7 @@
                     <td></td>
                     <td>상담이력 - 목록 없음</td>
                     <td>UI_ADHPAeM01</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/21_UI_ADHPAeM01.html" target="_blank">PC</a>
@@ -408,7 +408,7 @@
                     <td></td>
                     <td>상담이력 - 목록 있음</td>
                     <td>UI_ADHPAeM02</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/22_UI_ADHPAeM02.html" target="_blank">PC</a>
@@ -424,7 +424,7 @@
                     <td></td>
                     <td>완료 페이지 - 신청서 제출 완료</td>
                     <td>UI_ADHPAbS11</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/23_UI_ADHPAbS11.html" target="_blank">PC</a>
@@ -440,7 +440,7 @@
                     <td></td>
                     <td>완료 페이지 - 회수 완료</td>
                     <td>UI_ADHPAbS12</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/24_UI_ADHPAbS12.html" target="_blank">PC</a>
@@ -456,7 +456,7 @@
                     <td></td>
                     <td>완료 페이지 - 삭제 완료</td>
                     <td>UI_ADHPAbS13</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/25_UI_ADHPAbS13.html" target="_blank">PC</a>
@@ -472,7 +472,7 @@
                     <td></td>
                     <td>완료 페이지 - 수정 완료</td>
                     <td>UI_ADHPAbS14</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/26_UI_ADHPAbS14.html" target="_blank">PC</a>
@@ -488,7 +488,7 @@
                     <td></td>
                     <td>완료 페이지 - 신청 완료</td>
                     <td>UI_ADHPAbS15</td>
-                    <td class="status">완료</td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/27_UI_ADHPAbS15.html" target="_blank">PC</a>
