--- a/mobile/05_UI_ADHPAbS03.html
+++ b/mobile/05_UI_ADHPAbS03.html
@@ -69,7 +69,7 @@
                                                     <div class="cell">
                                                         <span class="box_ipt new_ipt">
                                                             <input type="text" id="bassAdrTxt" class="input_txt" title="대학교 명" readonly="" placeholder="AAA 대학교">
-                                                            <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
+                                                            <!-- <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button> -->
                                                         </span>
                                                     </div>
                                                     <button type="button" class="btn medium type01 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog">검색</button>
